# redis-me

./: .gitignore  README.md  demo.html  index.html  package.json  pnpm-lock.yaml  vite.config.js  vite.config.ts
.github/workflows/: main.yml
doc/: todo.md
src/: App.css  App.scss  App.vue  main.js  main.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  windows-app-manifest.xml
src-tauri/capabilities/: default.json
src-tauri/resources/icons/: icon.icns
src-tauri/src/: api.rs  cert.rs  common.rs  conn.rs  lib.rs  main.rs  model.rs  service.rs  util.rs
src-tauri/src/client/: client.rs  impl_cluster.rs  impl_single.rs  interface.rs  mod.rs  state.rs
src-tauri/src/helper/: conn.rs  macros.rs  util.rs
src-tauri/src/utils/: conn.rs  init.rs  logger.rs  macros.rs  mod.rs  model.rs  state.rs  util.rs
src/api/: index.ts  mock.ts  model.ts
src/components/: MeButton.vue  MeCode.vue  MeContext.vue  MeDialog.vue  MeFileInput.vue  MeFlex.vue  MeIcon.vue  MeTable.vue  MeXterm.vue  MetaButton.vue  MetaCode.vue  MetaIcon.vue
src/plugins/: bus.js  directive.js  element-plus.js  icon.js  me.js  mitt.js  pinia.js  tauri.js  vxe.js
src/styles/: dark.scss  index.scss
src/utils/: api-mock.js  api-mock.ts  api.js  api.ts  const.js  event.ts  help.js  index.ts  mock.js  model.ts  store.js  store.ts  tip.js  util.js  util.ts  zz-model.ts.bak
src/views/: AppMain.vue  AppTitle.vue  KeyHeader.vue  KeyMain.vue  RedisConn.vue  RedisKey.vue  RedisMain.vue  RedisTag.vue  TabConn.vue  TabMain.vue  index.vue
src/views/conn/: SaveConn.vue
src/views/dialog/: AppSetting.vue  Conn.vue  Setting.vue
src/views/ext/: AppInfo.vue  AppTitle.vue  ConnSave.vue  FieldAdd.vue  FieldSet.vue  NodeList.vue  SaveConn.vue  Setting.vue
src/views/key/: KeyBatchDel.vue  KeyFooter.vue  KeyHeader.vue  KeyMain.vue  KeyMemory.vue  ListKey.vue  TreeKey.vue
src/views/key/detail/: FolderKey.vue  (+9 more)
src/views/tab/: RedisClient.vue  RedisConfig.vue  RedisInfo.vue  RedisMemory.vue  RedisMonitor.vue  RedisPubsub.vue  RedisSlow.vue  RedisTauri.vue  RedisTerminal.vue  RedisValue.vue
src/views/tag/: RedisChart.vue  RedisClient.vue  RedisConfig.vue  RedisConn.vue  RedisConsole.vue  RedisDemo.vue  RedisInfo.vue  RedisMemory.vue  RedisMonitor.vue  RedisPubsub.vue  RedisServer.vue  RedisSlow.vue  RedisTauri.vue  RedisTerminal.vue  RedisValue.vue
src/views/tags/: RedisInfo.vue  RedisMemory.vue  RedisValue.vue
(+1 files in other folders)
