[package]
name = "redis-me"
version = "0.1.0"
description = "Redis Desktop Manager based on Tauri"
authors = ["hepengju"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "redis_me_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# tauri默认依赖
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# 项目添加依赖
redis = { version = "0.32.5", features = ["r2d2", "connection-manager", "cluster", "sentinel", "json", "tls-rustls", "tls-rustls-insecure", "tokio-comp", "tokio-rustls-comp"] }
log = "0.4.28"
env_logger = "0.11.8"
rustls = { version = "0.23.32", default-features = false, features = ["ring"] }
ctor = "0.5.0"
