[package]
name = "redis-me"
version = "0.1.0"
description = "Redis Desktop Manager based on Tauri"
authors = ["hepengju"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "redis_me_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# tauri默认依赖
tauri = { version = "2", features = [] }
tauri-plugin-log = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

# 项目添加依赖
redis = { version = "=1.0.0-rc.3", features = ["cluster", "sentinel", "json", "tls-rustls", "tls-rustls-insecure"] }
log = "0.4.28"
rand = "0.9.2"
anyhow = { version = "1"}
shell-words = "1"
base64 = "0.22.1"
chrono = "0.4.23"
chrono-tz = "0.8"
fern = { version = "0.7", features = ["colored"] }
tauri-plugin-dialog = "2.4.2"
tauri-plugin-opener = "2.5.2"
tauri-plugin-store = "2"
tauri-plugin-fs = "2"
